Adding file for tutorial

--- a/_talks/2021-08-21-talk-1.md
+++ b/_talks/2021-08-21-talk-1.md
@@ -8,5 +8,5 @@ date: 2021-09-07
 location: "Salt Lake City, USA"
 ---
 
-[Tutorial Pdf](/Pytorch-Session.pdf)
+[Tutorial Pdf](http://academicpages.github.io/files/Pytorch-Session.pdf)
 
