Adding Projects Page Edits

--- a/_projects/2021-05-05-CS6350.md
+++ b/_projects/2021-05-05-CS6350.md
@@ -2,7 +2,7 @@
 title: "CS6350 Machine Learning Project"
 collection: project
 type: "Academic Projects"
-permalink: /projects/2021_05_05_CS6350.md
+permalink: /projects/2021_05_05_CS6350
 venue: "School of Computing, University of Utah"
 date: 2021-05-05
 location: "Salt Lake City, USA"
