Adding updated pages

--- a/_publications/2023-07-05-InfoSync.md
+++ b/_publications/2023-07-05-InfoSync.md
@@ -7,6 +7,6 @@ excerpt: 'Information Synchronization of semi-structured data across languages i
 date: 2023-07-05
 venue: 'Findings of the Association for Computational Linguistics: ACL 2023'
 paperurl: 'https://aclanthology.org/2023.findings-acl.159/'
-ArchiveLink: https://arxiv.org/abs/2307.03313 
+archive: https://arxiv.org/abs/2307.03313 
 citation: 'Khincha, Siddharth, Chelsi Jain, Vivek Gupta, Tushar Kataria, and Shuo Zhang. "InfoSync: Information Synchronization across Multilingual Semi-structured Tables." In Findings of the Association for Computational Linguistics: ACL 2023, pp. 2536-2559. 2023.'
 ---
