Adding updated file

--- a/_publications/2023-11-01-NSF.md
+++ b/_publications/2023-11-01-NSF.md
@@ -7,5 +7,6 @@ excerpt: 'This paper presents an overview of an NSF Research Experience for Unde
 date: 2023-11-01
 venue: 'EduHPC23 Workshop on Education for High Performance Computing'
 paperurl: 'https://dl.acm.org/doi/abs/10.1145/3624062.3624100'
-citation: 'Hall, Mary, Ganesh Gopalakrishnan, Eric Eide, Johanna Cohoon, Jeff Phillips, Mu Zhang, Shireen Elhabian et al. "An NSF REU Site Based on Trust and Reproducibility of Intelligent Computation: Experience Report." In Proceedings of the SC'23 Workshops of The International Conference on High Performance Computing, Network, Storage, and Analysis, pp. 343-349. 2023.'
+archive: https://arxiv.org/abs/2307.03275
+citation: 'Hall, Mary, Ganesh Gopalakrishnan, Eric Eide, Johanna Cohoon, Jeff Phillips, Mu Zhang, Shireen Elhabian et al. "An NSF REU Site Based on Trust and Reproducibility of Intelligent Computation: Experience Report." In Proceedings of the SC23 Workshops of The International Conference on High Performance Computing, Network, Storage, and Analysis, pp. 343-349. 2023.'
 ---
