Adding updated page

--- a/_publications/2024-10-06-MLMI.md
+++ b/_publications/2024-10-06-MLMI.md
@@ -5,8 +5,8 @@ permalink: /publication/2024-10-06-MLMI
 excerpt: 'Statistical Shape Modeling (SSM) effectively analyzes anatomical variations within populations but is limited by the need for manual localization and segmentation, which relies on scarce medical expertise. Recent advances in deep learning have provided a promising approach that automatically generates statistical representations (as point distribution models or PDMs) from unsegmented images. Once trained, these deep learning-based models eliminate the need for manual segmentation for new subjects. Most deep learning methods still require manual pre-alignment of image volumes and bounding box specification around the target anatomy, leading to a partially manual inference process. Recent approaches facilitate anatomy localization but only estimate population-level statistical representations and cannot directly delineate anatomy in images. Additionally, they are limited to modeling a single anatomy. We introduce MASSM, a novel end-to-end deep learning framework that simultaneously localizes multiple anatomies, estimates population-level statistical representations, and delineates shape representations directly in image space. Our results show that MASSM, which delineates anatomy in image space and handles multiple anatomies through a multitask network, provides superior shape information compared to segmentation networks for medical imaging tasks. Estimating Statistical Shape Models (SSM) is a stronger task than segmentation, as it encodes a more robust statistical prior for the objects to be detected and delineated. MASSM allows for more accurate and comprehensive shape representations, surpassing the capabilities of traditional pixel-wise segmentation.'
  
 date: 2024-10-06
-venue: 'International Workshop on Machine Learning in Medical Imaging, 2024'
-paperurl: 'https://ieeexplore.ieee.org/abstract/document/10635646'
+venue: 'Shape in Medical Imaging, 2024'
+paperurl: 'https://arxiv.org/abs/2403.11008'
 archive: https://arxiv.org/abs/2403.11008
 citation: 'Ukey, Janmesh, Tushar Kataria, and Shireen Y. Elhabian. "MASSM: An End-to-End Deep Learning Framework for Multi-Anatomy Statistical Shape Modeling Directly From Images." arXiv preprint arXiv:2403.11008 (2024).'
 ---
